fix: app height stretch on screen

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    min-height: calc(var(--vh, 1vh) * 100);
+    // height: 100vh;
+    min-height: calc(var(--vh, 1vh) * 100 - 1px);
 }
